force-app/main/default/objects/copado__Stage_Connection__c/fields/copado__Next_Stage__c.field-meta.xml
<CustomField>
    <fullName>copado__Next_Stage__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; copado__Next_Stage_Connection__r.copado__Stage__r.Id, copado__Next_Stage_Connection__r.copado__Stage__r.copado__Display_Name__c, &quot;_self&quot;)</formula>
    <label>Next Stage</label>
    <type>Text</type>
</CustomField>