force-app/main/default/objects/copado__Stage_Connection__c/fields/copado__Next_Stage_Connection__c.field-meta.xml
<CustomField>
    <fullName>copado__Next_Stage_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Leave this field empty if this is the last stage of your pipeline. Otherwise, select the next higher stage. You can only select stage connections that belong to this pipeline.</inlineHelpText>
    <label>Next Stage Connection</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Stage Connections that belong to the same Pipeline.</errorMessage>
        <filterItems>
            <field>copado__Stage_Connection__c.copado__Pipeline__c</field>
            <operation>equals</operation>
            <valueField>$Source.copado__Pipeline__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__Stage_Connection__c</referenceTo>
    <relationshipLabel>Previous Stage Connections</relationshipLabel>
    <relationshipName>Next_Stage_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>