force-app/main/default/objects/copado__Stage_Connection__c/fields/copado__Pipeline__c.field-meta.xml
<CustomField>
    <fullName>copado__Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipName>Pipeline_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>