force-app/main/default/objects/copado__Stage_Connection__c/fields/copado__Stage__c.field-meta.xml
<CustomField>
    <fullName>copado__Stage__c</fullName>
    <label>Stage</label>
    <referenceTo>copado__Stage__c</referenceTo>
    <relationshipName>Pipeline_Stages</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>